--- a/nginx-college/22配置/nginx.conf
+++ b/nginx-college/22配置/nginx.conf
@@ -1,8 +1,8 @@
 worker_processes  8;	#允许生成的进程数，默认为1
 
-error_log  /usr/local/nginx/logs/error.log  info;
+error_log  /usr/local/nginx/logs/error.log  info; #错误日志记录位置
 
-pid        /usr/local/nginx/logs/nginx.pid;		 #指定nginx进程运行文件存放地址
+pid        /usr/local/nginx/logs/nginx.pid;		  #指定nginx进程运行文件存放地址
 
 
 events {
@@ -20,6 +20,7 @@ http {
     log_format  main  '$remote_addr - $host $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for" "$request_body"';
+
 
     upstream gatebalance {
        server 192.168.2.22:9000;
